--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -8,32 +8,6 @@
   justify-content: space-around;
 }
 
-.expenses-input {
-  background: #efefef;
-  border: 0;
-  border-radius: 3px;
-  color: black;
-  font-weight: 400;
-  margin-left: 10px;
-  outline: 0;
-  padding: 10px 0 10px 15px;
-  transition: all 0.3s ease-in-out;
-  width: 190px;
-}
-
-.expenses-select {
-  background: #efefef;
-  border: 0;
-  border-radius: 3px;
-  color: black;
-  font-weight: 400;
-  margin-left: 10px;
-  outline: 0;
-  padding: 10px 0 10px 15px;
-  transition: all 0.3s ease-in-out;
-  width: 110px;
-}
-
 .payment {
   width: 150px;
 }
@@ -43,9 +17,93 @@
   border: 0;
   border-radius: 3px;
   color: white;
+  font-size: 0.8em;
   font-weight: 400;
   outline: 0;
   padding: 10px 15px;
   transition: all 0.3s ease-in-out;
   width: 110px;
+}
+
+
+@media screen and ( max-width : 768px ) {
+
+  .form-expenses {
+    align-items: center;
+    background-color: #222;
+    color: #588157;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.3em;
+    height: fit-content;
+    justify-content: space-around;
+    padding: 20px 0;
+    width: 100vw;
+  }
+
+  .expenses-label {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+  }
+
+  .label-span {
+    width: 30%;
+  }
+
+  .expenses-input {
+    background: #efefef;
+    border: 0;
+    border-radius: 3px;
+    color: black;
+    font-weight: 400;
+    margin-bottom: 1em;
+    outline: 0;
+    padding: 10px 0 10px 15px;
+    transition: all 0.3s ease-in-out;
+    width: 60%;
+  }
+
+  .expenses-select {
+    background: #efefef;
+    border: 0;
+    border-radius: 3px;
+    color: black;
+    font-weight: 400;
+    margin-bottom: 1em;
+    outline: 0;
+    padding: 10px 0 10px 15px;
+    transition: all 0.3s ease-in-out;
+    width: 64.5%;
+  }
+}
+
+@media screen and ( min-width : 769px ) {
+
+  .expenses-input {
+    background: #efefef;
+    border: 0;
+    border-radius: 3px;
+    color: black;
+    font-weight: 400;
+    margin-left: 10px;
+    outline: 0;
+    padding: 10px 0 10px 15px;
+    transition: all 0.3s ease-in-out;
+    width: 190px;
+  }
+
+  .expenses-select {
+    background: #efefef;
+    border: 0;
+    border-radius: 3px;
+    color: black;
+    font-weight: 400;
+    margin-left: 10px;
+    outline: 0;
+    padding: 10px 0 10px 15px;
+    transition: all 0.3s ease-in-out;
+    width: 110px;
+  }
 }
