--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -1,7 +1,3 @@
-body {
-  background-color: #588157;
-}
-
 td , th {
   border: 1px solid rgb(190, 190, 190);
   padding: 10px;
@@ -14,15 +10,6 @@ td {
 th {
   background-color: #222;
   color: #588157;
-}
-
-table {
-  background-color: white;
-  border: 2px solid rgb(200, 200, 200);
-  border-collapse: collapse;
-  font-size: 1em;
-  letter-spacing: 1px;
-  width: 100%;
 }
 
 .btn-edit {
@@ -42,4 +29,50 @@ table {
   font-size: 1em;
   margin-left: 8px;
   padding: 5px 10px;
+}
+
+@media screen and ( max-width : 768px ) {
+
+  body {
+    background-color: #588157;
+    max-width: 100vw;
+  }
+
+  .table-container {
+    max-width: 100vw;
+    overflow-x: scroll;
+  }
+
+  table {
+    background-color: white;
+    border: 2px solid rgb(200, 200, 200);
+    border-collapse: collapse;
+    font-size: 1em;
+    letter-spacing: 1px;
+    width: 100vw;
+  }
+
+  .btn-container {
+    align-items: center;
+    display: flex;
+    height: 35px;
+    justify-content: center;
+    margin: 0;
+  }
+}
+
+@media screen and ( min-width : 769px ) {
+
+  body {
+    background-color: #588157;
+  }
+
+  table {
+    background-color: white;
+    border: 2px solid rgb(200, 200, 200);
+    border-collapse: collapse;
+    font-size: 1em;
+    letter-spacing: 1px;
+    width: 100%;
+  }
 }
