--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -58,6 +58,7 @@
     border-radius: 3px;
     color: black;
     font-weight: 400;
+    height: 1.5em;
     margin-bottom: 1em;
     outline: 0;
     padding: 10px 0 10px 15px;
@@ -71,6 +72,7 @@
     border-radius: 3px;
     color: black;
     font-weight: 400;
+    height: 3em;
     margin-bottom: 1em;
     outline: 0;
     padding: 10px 0 10px 15px;
